--- a/app/src/main/res/layout/fragment_image_selection.xml
+++ b/app/src/main/res/layout/fragment_image_selection.xml
@@ -12,16 +12,19 @@
             android:id="@+id/frame"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
+
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/FP_click_camera"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
-            android:src="@drawable/ic_baseline_save_as_24"
             android:backgroundTint="@color/white"
-            app:layout_constraintStart_toStartOf="parent"
+            android:contentDescription="@string/app_name"
+            android:src="@drawable/ic_baseline_save_as_24"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+           />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
