--- a/app/src/main/res/layout-land/fragment_image_selection.xml
+++ b/app/src/main/res/layout-land/fragment_image_selection.xml
@@ -21,6 +21,7 @@
             android:backgroundTint="@color/white"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:contentDescription="@string/camera" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
