--- a/app/src/main/res/layout/camera_ui_container.xml
+++ b/app/src/main/res/layout/camera_ui_container.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     android:background="@android:color/transparent">
 
-    <ImageButton
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/camera_switch_button"
         android:layout_width="@dimen/round_button_medium"
         android:layout_height="@dimen/round_button_medium"
@@ -22,7 +22,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:contentDescription="@string/camera_switch" />
 
-    <ImageButton
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/camera_capture_button"
         android:layout_width="@dimen/round_button_medium"
         android:layout_height="@dimen/round_button_medium"
@@ -34,7 +34,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:contentDescription="@string/capture" />
 
-    <ImageButton
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/photo_view_button"
         android:layout_width="80dp"
         android:layout_height="80dp"
